<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.google.android.material.textfield.TextInputLayout android:id="@+id/Layout_Email" android:layout_width="299dp" android:layout_height="87dp" android:hint="@string/Email" app:boxCornerRadiusTopEnd="10dp" app:boxCornerRadiusTopStart="10dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.42" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/Correo_Login" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:id="@+id/Layout_Password" android:layout_width="297dp" android:layout_height="82dp" android:hint="@string/Password" app:boxCornerRadiusTopEnd="10dp" app:boxCornerRadiusTopStart="10dp" app:endIconMode="1" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.489" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.576" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/Password_Login" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button android:id="@+id/btn_Ingresar" android:layout_width="169dp" android:layout_height="52dp" android:layout_marginTop="100dp" android:text="@string/Ingresar" android:backgroundTint="#121111" app:layout_constraintBottom_toTopOf="@+id/textView" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.924"/>
    <Button android:id="@+id/btn_F_Crear_C" android:layout_width="172dp" android:layout_height="49dp" android:text="@string/Crear_Cuenta" android:backgroundTint="#7e7c7c" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.497" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.922"/>
    <TextView android:textSize="16sp" android:gravity="center" android:id="@+id/textView" android:clickable="true" android:layout_width="170dp" android:layout_height="34dp" android:foreground="?attr/selectableItemBackgroundBorderless" android:minHeight="48dp" android:text="@string/Pregunta" android:foregroundGravity="center" android:onClick="onClick" app:layout_constraintBottom_toTopOf="@+id/btn_F_Crear_C" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.493" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="1"/>
    <ImageView android:id="@+id/imageView3" android:layout_width="336dp" android:layout_height="194dp" app:layout_constraintBottom_toTopOf="@+id/Layout_Email" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.491" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.309" app:srcCompat="@drawable/iconoapp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
