<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.google.android.material.textfield.TextInputLayout android:id="@+id/Layout_Nombre" android:layout_width="319dp" android:layout_height="82dp" android:hint="@string/Nombre" app:boxCornerRadiusTopEnd="10dp" app:boxCornerRadiusTopStart="10dp" app:endIconDrawable="@drawable/ic_usuario" app:endIconMode="-1" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.467" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.208" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/Nombre_Registro" android:layout_width="318dp" android:layout_height="57dp" android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.cardview.widget.CardView android:visibility="gone" android:clickable="true" android:layout_width="95dp" android:layout_height="90dp" android:foreground="?attr/selectableItemBackgroundBorderless" android:layout_marginStart="55dp" android:backgroundTint="#c3c1c1" app:cardCornerRadius="80dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.401" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.073">
        <ImageView android:id="@+id/IMG" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent" android:foreground="?attr/selectableItemBackgroundBorderless" android:scaleType="centerCrop" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.241"/>
    </androidx.cardview.widget.CardView>
    <com.google.android.material.textfield.TextInputLayout android:id="@+id/Layout_Correo" android:layout_width="318dp" android:layout_height="80dp" android:layout_marginTop="8dp" android:hint="@string/Email" app:boxCornerRadiusTopEnd="10dp" app:boxCornerRadiusTopStart="10dp" app:layout_constraintBottom_toTopOf="@+id/Layout_Contraseña" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.451" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/Layout_Nombre" app:layout_constraintVertical_bias="0.6" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/Correo_Registro" android:layout_width="318dp" android:layout_height="57dp" android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:id="@+id/Layout_Contraseña" android:layout_width="320dp" android:layout_height="80dp" android:layout_marginTop="16dp" android:hint="@string/Password" app:boxCornerRadiusTopEnd="10dp" app:boxCornerRadiusTopStart="10dp" app:endIconMode="1" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.461" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/Layout_Correo" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/Contraseña_Registro" android:layout_width="318dp" android:layout_height="57dp" android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:id="@+id/Layout_Contraseña_V" android:layout_width="322dp" android:layout_height="80dp" android:hint="@string/Verificar_Contraseña" app:boxCornerRadiusTopEnd="10dp" app:boxCornerRadiusTopStart="10dp" app:endIconMode="1" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.449" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/Layout_Contraseña" app:layout_constraintVertical_bias="0.109" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/Contraseña_Registro_V" android:layout_width="318dp" android:layout_height="57dp" android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button android:id="@+id/BTN_Registro" android:layout_width="177dp" android:layout_height="52dp" android:layout_marginBottom="28dp" android:text="@string/Registrarse" android:backgroundTint="#101010" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/BTN_VOLVER" android:clickable="true" android:layout_width="45dp" android:layout_height="41dp" android:src="@drawable/ic_baseline_arrow_back_24" android:scaleType="center" android:onClick="Volver" android:backgroundTint="@color/white" app:borderWidth="0dp" app:elevation="6dp" app:fabSize="1" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.044" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.023"/>
</androidx.constraintlayout.widget.ConstraintLayout>
