<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="24sp" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Peso" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.133" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.095"/>
    <EditText android:enabled="false" android:textColor="@color/black" android:gravity="center" android:id="@+id/Peso_IMC" android:background="@color/Gris" android:layout_width="189dp" android:layout_height="41dp" android:text="40" android:maxEms="5" android:ems="10" android:shadowColor="#120303" android:inputType="number" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.592" app:layout_constraintStart_toEndOf="@+id/textView2" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.097"/>
    <SeekBar android:id="@+id/SeekBar_Peso_IMC" android:layout_width="302dp" android:layout_height="31dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.376" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.227"/>
    <TextView android:textSize="24sp" android:id="@+id/textView3" android:layout_width="82dp" android:layout_height="46dp" android:text="@string/Altura" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.124" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.353"/>
    <EditText android:enabled="false" android:textColor="@color/black" android:gravity="center" android:id="@+id/Altura_IMC" android:background="@color/Gris" android:layout_width="189dp" android:layout_height="41dp" android:text="1,3" android:ems="10" android:inputType="number" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.686" app:layout_constraintStart_toEndOf="@+id/textView3" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.35"/>
    <SeekBar android:id="@+id/SeekBar_Altura_IMC" android:layout_width="302dp" android:layout_height="32dp" app:labelBehavior="1" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.376" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.499"/>
    <TextView android:textSize="34sp" android:gravity="center" android:id="@+id/IMC_Calculado" android:layout_width="206dp" android:layout_height="77dp" android:foregroundGravity="center" app:layout_constraintBottom_toTopOf="@+id/btn_Calcular_IMC" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.497" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/SeekBar_Altura_IMC" app:layout_constraintVertical_bias="0.272"/>
    <Button android:id="@+id/btn_Calcular_IMC" android:layout_width="179dp" android:layout_height="57dp" android:text="@string/Calcular_IMC" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.956"/>
    <TextView android:textSize="20sp" android:gravity="center" android:id="@+id/IMC_Evaluacion" android:layout_width="165dp" android:layout_height="56dp" app:layout_constraintBottom_toTopOf="@+id/btn_Calcular_IMC" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/IMC_Calculado" app:layout_constraintVertical_bias="0.262"/>
</androidx.constraintlayout.widget.ConstraintLayout>
